--- a/config/resumes.properties
+++ b/config/resumes.properties
@@ -1,4 +1,4 @@
 storage.dir = C:/projects/basejava/storage
-db.url = jdbc:postgresql://localhost:5432/resumes
+db.url = jdbc:postgresql://localhost:5432/postgres
 db.user = postgres
 db.password = 1331
